--- a/Rules
+++ b/Rules
@@ -23,6 +23,13 @@ compile '/highlight/' do
   filter :erb
 end
 
+compile '/reference/*' do
+  filter :erb
+  filter :kramdown, toc_levels: [2], header_offset: 1, enable_coderay: false
+  filter :colorize_syntax, default_colorizer: :pygmentsrb
+  layout item[:layout] || 'default'
+end
+
 compile '*' do
   filter :erb
   filter :kramdown, toc_levels: [2], header_offset: 1, enable_coderay: false
